k8s/service-aggr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-service-aggr
  labels:
    app: alog
    tier: service-aggr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alog
      tier: service-aggr
  template:
    metadata:
      labels:
        app: alog
        tier: service-aggr
    spec:
      containers:
      - name: alog-service-aggr
        image: chromato99/alog-service-aggregator:latest
        ports:
        - containerPort: 8082
          name: aggr-http
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: alog-service-aggr
spec:
  type: NodePort
  ports:
  - name : aggr-port
    port: 8082
    targetPort: aggr-http
    nodePort: 30082
  selector:
    app: alog
    tier: service-aggr
---
