k8s/service-auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-service-auth
  labels:
    app: alog
    tier: service-auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alog
      tier: service-auth
  template:
    metadata:
      labels:
        app: alog
        tier: service-auth
    spec:
      containers:
      - name: alog-service-auth
        image: chromato99/alog-service-auth:latest
        ports:
        - containerPort: 8087
          name: auth-http
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: alog-service-auth
spec:
  type: NodePort
  ports:
  - name : auth-port
    port: 8087
    targetPort: auth-http
    nodePort: 30087
  selector:
    app: alog
    tier: service-auth
---
