k8s/service-file.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-service-file
  labels:
    app: alog
    tier: service-file
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alog
      tier: service-file
  template:
    metadata:
      labels:
        app: alog
        tier: service-file
    spec:
      containers:
      - name: alog-service-file
        image: chromato99/alog-service-file:latest
        ports:
        - containerPort: 8084
          name: file-http
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: alog-service-file
spec:
  ports:
  - name : file-port
    port: 8084
    targetPort: file-http
  selector:
    app: alog
    tier: service-file
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-file-db
  labels:
    app: alog
    tier: file-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alog
      tier: file-db
  template:
    metadata:
      labels:
        app: alog
        tier: file-db
    spec:
      containers:
      - name: alog-file-db
        image: mysql:8
        ports:
        - containerPort: 3306
        volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: file-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: alog-file-db
spec:
  ports:
  - name : file-db-port
    port: 3306
    targetPort: 3306
  selector:
    app: alog
    tier: file-db
---
