k8s/service-issue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-service-issue
  labels:
    app: alog
    tier: service-issue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alog
      tier: service-issue
  template:
    metadata:
      labels:
        app: alog
        tier: service-issue
    spec:
      containers:
      - name: alog-service-issue
        image: chromato99/alog-service-issue:latest
        ports:
        - containerPort: 8084
          name: issue-http
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: alog-service-issue
spec:
  ports:
  - name : issue-port
    port: 8084
    targetPort: issue-http
  selector:
    app: alog
    tier: service-issue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-issue-db
  labels:
    app: alog
    tier: issue-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alog
      tier: issue-db
  template:
    metadata:
      labels:
        app: alog
        tier: issue-db
    spec:
      containers:
      - name: alog-issue-db
        image: mysql:8
        ports:
        - containerPort: 3306
        volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: issue-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: alog-issue-db
spec:
  ports:
  - name : issue-db-port
    port: 3306
    targetPort: 3306
  selector:
    app: alog
    tier: issue-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-issue-cache
  labels:
    app: alog
    tier: issue-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alog
      tier: issue-cache
  template:
    metadata:
      labels:
        app: alog
        tier: issue-cache
    spec:
      containers:
      - name: alog-issue-cache
        image: redis:7
        ports:
        - containerPort: 6379
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: alog-issue-cache
spec:
  ports:
  - name : issue-cache-port
    port: 6379
    targetPort: 6379
  selector:
    app: alog
    tier: issue-cache
---
