k8s/service-project.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-service-project
  labels:
    app: alog
    tier: service-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alog
      tier: service-project
  template:
    metadata:
      labels:
        app: alog
        tier: service-project
    spec:
      containers:
      - name: alog-service-project
        image: chromato99/alog-service-project:latest
        ports:
        - containerPort: 8083
          name: project-http
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: alog-service-project
spec:
  ports:
  - name : project-port
    port: 8083
    targetPort: project-http
  selector:
    app: alog
    tier: service-project
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-project-db
  labels:
    app: alog
    tier: project-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alog
      tier: project-db
  template:
    metadata:
      labels:
        app: alog
        tier: project-db
    spec:
      containers:
      - name: alog-project-db
        image: mysql:8
        ports:
        - containerPort: 3306
        volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: project-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: alog-project-db
spec:
  ports:
  - name : project-db-port
    port: 3306
    targetPort: 3306
  selector:
    app: alog
    tier: project-db
---
