k8s/service-release.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-service-release
  labels:
    app: alog
    tier: service-release
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alog
      tier: service-release
  template:
    metadata:
      labels:
        app: alog
        tier: service-release
    spec:
      containers:
      - name: alog-service-release
        image: chromato99/alog-service-release:latest
        ports:
        - containerPort: 8085
          name: release-http
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: alog-service-release
spec:
  ports:
  - name : release-port
    port: 8085
    targetPort: release-http
  selector:
    app: alog
    tier: service-release
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-release-db
  labels:
    app: alog
    tier: release-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alog
      tier: release-db
  template:
    metadata:
      labels:
        app: alog
        tier: release-db
    spec:
      containers:
      - name: alog-release-db
        image: mysql:8
        ports:
        - containerPort: 3306
        volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: release-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: alog-release-db
spec:
  ports:
  - name : release-db-port
    port: 3306
    targetPort: 3306
  selector:
    app: alog
    tier: release-db
---
