k8s/service-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-service-user
  labels:
    app: alog
    tier: service-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alog
      tier: service-user
  template:
    metadata:
      labels:
        app: alog
        tier: service-user
    spec:
      containers:
      - name: alog-service-user
        image: chromato99/alog-service-user:latest
        ports:
        - containerPort: 8081
          name: user-http
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: alog-service-user
spec:
  ports:
  - name : user-port
    port: 8081
    targetPort: user-http
  selector:
    app: alog
    tier: service-user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alog-user-db
  labels:
    app: alog
    tier: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alog
      tier: user-db
  template:
    metadata:
      labels:
        app: alog
        tier: user-db
    spec:
      containers:
      - name: alog-user-db
        image: mysql:8
        ports:
        - containerPort: 3306
          name: user-db-mysql
        volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: user-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: alog-user-db
spec:
  ports:
  - name : user-db-port
    port: 3306
    targetPort: user-db-mysql
  selector:
    app: alog
    tier: user-db
---
